# ModelSearchCore

./: .gitignore  Readme.md  architecture.puml  docker-compose.yml  pyproject.toml
.github/workflows/: merge-discord-alert.yml  pr-discord-alert.yml
colab/src/: CLASES_PARAMETRICAS.md
colab/src/MAIA_B01_001_BL_FILTERS/: README.md  orquestador_ablation.py  patch_ablation_runner.py
colab/src/MAIA_B01_001_BL_ch32_lr3_px30/: objetivo_experimento.md  subpatch_visualizer.py  (+1 more)
cuadernos/: README.md  Segemetacion_mascara_grises_sobre_radiografia.ipynb  Unet_final.ipynb
mlflow/: Dockerfile  Readme.md  pyproject.toml
mlflow/src/: kafka_consumer.py
orquestador/: Readme.md  pyproject.toml
orquestador/src/: kafka_producer.py
orquestador/src/controllers/: health.py
orquestador/src/dto/: job_config_dto.py  job_status.py  model_type.py
orquestador/src/service/: pod_discovery_service.py
orquestador/src/tests/: test_hyperparameter_queue.py
orquestador/src/utils/: hyperparameter_queue.py
result/: filter_audit_cnn_analysis.md  filter_audit_summary_20260402_052851.json  mask_audit_light.csv  mask_audit_reports.csv  mask_audit_summary.md
worker/: Dockerfile  IMPLEMENTACION.md  Readme.md  pyproject.toml
worker/src/: kafka_consumer.py  main.py
worker/src/controllers/: health.py
worker/src/dto/: general_models.py
worker/src/strategy/: executer_model.py  gradient_boosting_executer.py  linear_regression_executer.py  neural_network_executer.py  random_forest_executer.py  strategy_dispatcher.py  svm_executer.py
worker/src/utils/: hyperparameter_queue.py
(+68 files in other folders)
